--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "genshin-db": "^5.2.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "vite-plugin-pwa": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
