--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    
     "genshin-db": "^5.2.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -29,6 +28,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "jiti": "^2.6.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
